--- a/src/content/docs/runes/bindable.mdx
+++ b/src/content/docs/runes/bindable.mdx
@@ -7,7 +7,7 @@ sidebar:
 
 Обычно пропсы движутся в одном направлении — от родителя к потомку. Это упрощает понимание того, как данные перемещаются в вашем приложении.
 
-В Svelte пропсы компонентов могут быть _привязаны_, что означает, что данные также могут течь _вверх_ от потомка к родителю. Это не то, что вы должны делать часто, но это может упростить ваш код, если использовать с осторожностью и в ограниченных количествах.
+В Svelte пропсы компонента можно _привязывать_ (`bind`), что позволяет данным течь _вверх_ — от дочернего компонента к родительскому. Делать это часто не рекомендуется — чрезмерное использование делает поток данных непредсказуемым и усложняет поддержку компонентов — но при редком и аккуратном применении это может существенно упростить код.
 
 Это также означает, что прокси состояния может быть _изменён_ в дочернем компоненте.
 
