--- a/src/content/docs/introduction/getting-started.mdx
+++ b/src/content/docs/introduction/getting-started.mdx
@@ -3,7 +3,7 @@ title: Первые шаги
 origin: https://svelte.dev/docs/svelte/getting-started
 ---
 
-Мы рекомендуем использовать [SvelteKit](/kit/getting-started/introduction), который позволяет [создавать практически что угодно](/kit/getting-started/project-types). Это официальный фреймворк для разработки приложений от команды Svelte, работающий на базе [Vite](https://dragomano.github.io/vite-docs/). Создайте новый проект с помощью команды:
+Мы рекомендуем использовать [SvelteKit](/kit/getting-started/introduction), который позволяет [создавать практически что угодно](/kit/getting-started/project-types). Это официальный фреймворк для разработки приложений от команды Svelte, работающий на базе [Vite](https://vite-docs.ru/). Создайте новый проект с помощью команды:
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
@@ -50,7 +50,7 @@ Vite часто используется в автономном режиме д
 
 Команда Svelte поддерживает [расширение для VS Code](https://marketplace.visualstudio.com/items?itemName=svelte.svelte-vscode), а также существуют интеграции с различными другими [редакторами](https://sveltesociety.dev/collection/editor-support-c85c080efc292a34) и инструментами.
 
-Вы можете проверять свой код из командной строки, используя [`sv check`](https://github.com/sveltejs/cli).
+Вы можете проверять свой код из командной строки, используя команду [`sv check`](https://github.com/sveltejs/cli).
 
 ## Получение помощи
 
