--- a/src/content/docs/kit/getting-started/creating-a-project.mdx
+++ b/src/content/docs/kit/getting-started/creating-a-project.mdx
@@ -44,4 +44,4 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 ## Настройка редактора
 
-Мы рекомендуем использовать [Visual Studio Code (VS Code)](https://code.visualstudio.com/download) с [расширением Svelte](https://marketplace.visualstudio.com/items?itemName=svelte.svelte-vscode), но [также есть поддержка для многих других редакторов](https://sveltesociety.dev/resources#editor-support).
+Мы рекомендуем использовать [Visual Studio Code (VS Code)](https://code.visualstudio.com/download) с [расширением Svelte](https://marketplace.visualstudio.com/items?itemName=svelte.svelte-vscode), но [также есть поддержка для многих других редакторов](https://sveltesociety.dev/collection/editor-support-c85c080efc292a34).
