--- a/src/content/docs/introduction/getting-started.mdx
+++ b/src/content/docs/introduction/getting-started.mdx
@@ -41,7 +41,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 Вы также можете использовать Svelte напрямую с Vite, запустив команду `npm create vite@latest` и выбрав опцию `svelte`. В этом случае команда `npm run build` сгенерирует файлы HTML, JS и CSS в директории `dist`, используя [vite-plugin-svelte](https://github.com/sveltejs/vite-plugin-svelte). В большинстве случаев вам, вероятно, потребуется [выбрать библиотеку маршрутизации](/misc/faq#есть-ли-роутер).
 
 :::note
-Vite часто используется в автономном режиме для сборки [одностраничных приложений (SPA)](https://svelte.dev/docs/kit/glossary#SPA), которые также можно [создавать с помощью SvelteKit](https://svelte.dev/docs/kit/single-page-apps).
+Vite часто используется в автономном режиме для сборки [одностраничных приложений (SPA)](https://svelte.dev/docs/kit/glossary#SPA), которые также можно [создавать с помощью SvelteKit](/kit/build-and-deploy/single-page-apps).
 :::
 
 Существуют также плагины для [Rollup](https://github.com/sveltejs/rollup-plugin-svelte), [Webpack](https://github.com/sveltejs/svelte-loader) [и некоторых других сборщиков](https://sveltesociety.dev/packages?category=build-plugins), но мы рекомендуем Vite.
