--- a/src/content/docs/kit/core-concepts/page-options.mdx
+++ b/src/content/docs/kit/core-concepts/page-options.mdx
@@ -53,7 +53,7 @@ export const prerender = 'auto';
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-<Tabs syncKey="starlight-package-managers-pkg">
+<Tabs syncKey="lang">
   <TabItem label="JS">
     ```js
     // +page.js
@@ -225,7 +225,7 @@ export const trailingSlash = 'always';
 
 `config` — это объект с парами ключ-значение верхнего уровня. Конкретная структура зависит от используемого адаптера. Каждый адаптер должен предоставлять интерфейс `Config` для типизации. Подробности см. в документации вашего адаптера.
 
-<Tabs syncKey="starlight-package-managers-pkg">
+<Tabs syncKey="lang">
   <TabItem label="JS">
     ```js
     // src/routes/+page.js
