--- a/src/content/docs/kit/advanced/advanced-routing.mdx
+++ b/src/content/docs/kit/advanced/advanced-routing.mdx
@@ -84,7 +84,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 
 :::note
-Если вы не обрабатываете случаи 404, они появятся в [`handleError`](https://svelte.dev/docs/kit/hooks#Shared-hooks-handleError)
+Если вы не обрабатываете случаи 404, они появятся в [`handleError`](/kit/advanced/hooks/#handleerror)
 :::
 
 ## Опциональные параметры
