--- a/src/content/docs/kit/build-and-deploy/adapter-node.mdx
+++ b/src/content/docs/kit/build-and-deploy/adapter-node.mdx
@@ -137,7 +137,7 @@ ADDRESS_HEADER=True-Client-IP node build
 
 ### `BODY_SIZE_LIMIT`
 
-Максимальный размер тела запроса в байтах, принимаемый при потоковой передаче. Размер тела можно также указать с суффиксом единицы измерения для килобайт (`K`), мегабайт (`M`) или гигабайт (`G`). Например, `512K` или `1M`. По умолчанию — 512 КБ. Эту опцию можно отключить, установив значение `Infinity` (в старых версиях адаптера — 0) и реализовав пользовательскую проверку в [`handle`](https://svelte.dev/docs/kit/hooks#Server-hooks-handle), если требуется более сложная логика.
+Максимальный размер тела запроса в байтах, принимаемый при потоковой передаче. Размер тела можно также указать с суффиксом единицы измерения для килобайт (`K`), мегабайт (`M`) или гигабайт (`G`). Например, `512K` или `1M`. По умолчанию — 512 КБ. Эту опцию можно отключить, установив значение `Infinity` (в старых версиях адаптера — 0) и реализовав пользовательскую проверку в [`handle`](/kit/advanced/hooks/#handle), если требуется более сложная логика.
 
 ### `SHUTDOWN_TIMEOUT`
 
