--- a/src/content/docs/kit/getting-started/project-structure.mdx
+++ b/src/content/docs/kit/getting-started/project-structure.mdx
@@ -58,8 +58,8 @@ import { FileTree } from '@astrojs/starlight/components';
 - `error.html` — страница, отображаемая при фатальной ошибке. Может содержать следующие плейсхолдеры:
   - `%sveltekit.status%` — HTTP-статус.
   - `%sveltekit.error.message%` — сообщение об ошибке.
-- `hooks.client.js` содержит клиентские [хуки](https://svelte.dev/docs/kit/hooks).
-- `hooks.server.js` содержит серверные [хуки](https://svelte.dev/docs/kit/hooks).
+- `hooks.client.js` содержит клиентские [хуки](/kit/advanced/hooks).
+- `hooks.server.js` содержит серверные [хуки](/kit/advanced/hooks).
 - `service-worker.js` содержит ваш [service worker](https://svelte.dev/docs/kit/service-workers).
 
 (Наличие файлов с расширениями `.js` или `.ts` зависит от того, выбрали ли вы TypeScript при создании проекта.)
