--- a/src/content/docs/runes/props.mdx
+++ b/src/content/docs/runes/props.mdx
@@ -5,7 +5,7 @@ sidebar:
   order: 4
 ---
 
-Входные данные компонента называются _props_, что является сокращением от _properties_. Вы передаете пропсы компонентам так же, как передаете атрибуты элементам:
+Входные данные компонента называются _пропсами_ (_props_ — сокращение от _properties_). Вы передаете пропсы компонентам так же, как передаете атрибуты элементам:
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
@@ -373,6 +373,8 @@ let { a, b, c, ...others } = $props();
 :::note
 Интерфейсы для нативных DOM-элементов предоставляются в модуле `svelte/elements` (см. [Типизация обёрток компонентов](/misc/typescript#типизация-обёрток-компонентов)).
 :::
+
+Если ваш компонент использует пропсы в виде [сниппетов](/template-syntax/snippet/) (в том числе `children`), [типизируйте их через интерфейс `Snippet`](/template-syntax/snippet/#типизация-сниппетов) из модуля `'svelte'`.
 
 Рекомендуется добавлять типы, так как это подскажет пользователям вашего компонента, какие пропсы они должны предоставить.
 
