--- a/src/content/docs/template-syntax/attach.mdx
+++ b/src/content/docs/template-syntax/attach.mdx
@@ -179,6 +179,14 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 Вложенный эффект выполняется при каждом изменении `color`, тогда как внешний эффект (где вызывается `canvas.getContext(...)`) выполняется только один раз, так как не зависит от реактивного состояния.
 :::
 
+## Привязки по условию
+
+Ложные значения, такие как `false` или `undefined`, рассматриваются как отсутствие привязки, что позволяет использовать их условно:
+
+```svelte
+<div {@attach enabled && myAttachment}>...</div>
+```
+
 ## Передача привязок в компоненты
 
 При использовании `{@attach ...}` на компоненте создаётся проп с ключом-`Symbol`. Если компонент затем [распространяет пропсы](https://svelte.dev/tutorial/svelte/spread-props) на элемент, этот элемент получит привязки.
