--- a/src/content/docs/kit/advanced/hooks.mdx
+++ b/src/content/docs/kit/advanced/hooks.mdx
@@ -162,7 +162,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
   </TabItem>
 </Tabs>
 
-Обратите внимание, что `resolve(...)` никогда не выбросит ошибку — она всегда вернёт `Promise<Response>` с соответствующим кодом статуса. Если ошибка будет выброшена в другом месте во время выполнения `handle`, она считается фатальной, и SvelteKit ответит JSON-представлением ошибки или резервной страницей ошибки — которую можно настроить через `src/error.html` — в зависимости от заголовка `Accept`. Подробнее об обработке ошибок можно прочитать [здесь](https://svelte.dev/docs/kit/errors).
+Обратите внимание, что `resolve(...)` никогда не выбросит ошибку — она всегда вернёт `Promise<Response>` с соответствующим кодом статуса. Если ошибка будет выброшена в другом месте во время выполнения `handle`, она считается фатальной, и SvelteKit ответит JSON-представлением ошибки или резервной страницей ошибки — которую можно настроить через `src/error.html` — в зависимости от заголовка `Accept`. Подробнее об обработке ошибок можно прочитать [здесь](/kit/advanced/errors).
 
 ### handleFetch
 
@@ -295,7 +295,7 @@ export const getTodo = query(v.string(), (id) => {
 
 ### handleError
 
-Если во время загрузки, рендеринга или в эндпойнте возникает [неожиданная ошибка](https://svelte.dev/docs/kit/errors#Unexpected-errors), эта функция будет вызвана с параметрами `error`, `event`, кодом статуса `status` и сообщением `message`. Это позволяет делать две вещи:
+Если во время загрузки, рендеринга или в эндпойнте возникает [неожиданная ошибка](/kit/advanced/errors/#неожиданные-ошибки), эта функция будет вызвана с параметрами `error`, `event`, кодом статуса `status` и сообщением `message`. Это позволяет делать две вещи:
 
 - регистрировать (логировать) ошибку
 - генерировать пользовательское представление ошибки, безопасное для показа пользователям и не содержащее чувствительных деталей, таких как сообщения и стек-трейсы. Возвращаемое значение (по умолчанию `{ message }`) становится значением `$page.error`.
