--- a/src/content/docs/kit/core-concepts/form-actions.mdx
+++ b/src/content/docs/kit/core-concepts/form-actions.mdx
@@ -809,7 +809,7 @@ const response = await fetch(this.action, {
 </form>
 ```
 
-Отправка этой формы приведёт к переходу на `/search?q=...` и вызову вашей функции `load`, но не вызовет действие. Как и с элементами `<a>`, вы можете использовать атрибуты [`data-sveltekit-reload`](https://svelte.dev/docs/kit/link-options#data-sveltekit-reload), [`data-sveltekit-replacestate`](https://svelte.dev/docs/kit/link-options#data-sveltekit-replacestate), [`data-sveltekit-keepfocus`](https://svelte.dev/docs/kit/link-options#data-sveltekit-keepfocus) и [`data-sveltekit-noscroll`](https://svelte.dev/docs/kit/link-options#data-sveltekit-noscroll) на элементе `<form>` для управления поведением роутера.
+Отправка этой формы приведёт к переходу на `/search?q=...` и вызову вашей функции `load`, но не вызовет действие. Как и с элементами `<a>`, вы можете использовать атрибуты [`data-sveltekit-reload`](/kit/advanced/link-options/#data-sveltekit-reload), [`data-sveltekit-replacestate`](/kit/advanced/link-options/#data-sveltekit-replacestate), [`data-sveltekit-keepfocus`](/kit/advanced/link-options/#data-sveltekit-keepfocus) и [`data-sveltekit-noscroll`](/kit/advanced/link-options/#data-sveltekit-noscroll) на элементе `<form>` для управления поведением роутера.
 
 ## Дополнительные материалы
 
