--- a/src/content/docs/kit/advanced/advanced-routing.mdx
+++ b/src/content/docs/kit/advanced/advanced-routing.mdx
@@ -1,5 +1,5 @@
 ---
-title: Расширенный роутинг
+title: Расширенная маршрутизация
 origin: https://svelte.dev/docs/kit/advanced-routing
 sidebar:
   order: 0
@@ -357,4 +357,4 @@ src/routes/
 
 ## Дополнительные материалы
 
-- [Учебник: Расширенный роутинг](https://svelte.dev/tutorial/kit/optional-params)
+- [Учебник: Расширенная маршрутизация](https://svelte.dev/tutorial/kit/optional-params)
