--- a/src/content/docs/kit/core-concepts/remote-functions.mdx
+++ b/src/content/docs/kit/core-concepts/remote-functions.mdx
@@ -9,7 +9,7 @@ import { Badge } from '@astrojs/starlight/components';
 
 <Badge text="Доступно с версии 2.27" size="large" />
 
-Удалённые функции — это инструмент для типобезопасного взаимодействия между клиентом и сервером. Их можно вызывать в любой части вашего приложения, но они всегда выполняются на сервере, что позволяет безопасно использовать [модули, доступные только на сервере](https://svelte.dev/docs/kit/server-only-modules), такие как переменные окружения и клиенты баз данных.
+Удалённые функции — это инструмент для типобезопасного взаимодействия между клиентом и сервером. Их можно вызывать в любой части вашего приложения, но они всегда выполняются на сервере, что позволяет безопасно использовать [модули, доступные только на сервере](/kit/advanced/server-only-modules), такие как переменные окружения и клиенты баз данных.
 
 В сочетании с экспериментальной поддержкой Svelte для [`await`](/template-syntax/await-expressions) это позволяет загружать и обрабатывать данные непосредственно внутри ваших компонентов.
 
