--- a/src/content/docs/kit/getting-started/project-structure.mdx
+++ b/src/content/docs/kit/getting-started/project-structure.mdx
@@ -46,7 +46,7 @@ import { FileTree } from '@astrojs/starlight/components';
 Содержит основную логику приложения. Обязательные элементы — только `routes/` и `app.html`.
 
 - `lib` содержит код вашей библиотеки (утилиты и компоненты), который можно импортировать через псевдоним [`$lib`](https://svelte.dev/docs/kit/$lib) или упаковать для распространения с помощью [`svelte-package`](https://svelte.dev/docs/kit/packaging).
-  - `server` содержит библиотечный код, предназначенный только для сервера. Его можно импортировать с помощью псевдонима [`$lib/server`](https://svelte.dev/docs/kit/server-only-modules). SvelteKit не позволит импортировать эти модули в клиентский код.
+  - `server` содержит библиотечный код, предназначенный только для сервера. Его можно импортировать с помощью псевдонима [`$lib/server`](/kit/advanced/server-only-modules). SvelteKit не позволит импортировать эти модули в клиентский код.
 - `params` содержит любые [сопоставители параметров](/kit/advanced/advanced-routing/#сопоставление), необходимые вашему приложению.
 - `routes` содержит [маршруты](/kit/core-concepts/routing) вашего приложения. Также здесь можно размещать компоненты, используемые только внутри одного маршрута.
 - `app.html` — это шаблон страницы — HTML-документ, содержащий следующие плейсхолдеры:
